Pagination added to service