@@ -3,11 +3,14 @@ package aiss.gitlabminer.service;
 import aiss.gitlabminer.model.*;
 
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpEntity;
+import org.springframework.http.HttpHeaders;
+import org.springframework.http.HttpMethod;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.HttpClientErrorException;
 import org.springframework.web.client.RestTemplate;
 
-import java.util.List;
+import java.util.*;
 
 @Service
 public class ProjectService {
@@ -22,23 +25,85 @@ replaced by %2F in Postman requests, declared as a single parameter here*/
     public Project getProject(String owner, String name) {
         String param = owner + "/" + name;
 
-//        TO FIX: pagination for commits, issues and comments?
-
-//        Get project
+//        Get project (single project, no need for pagination)
         Project project = restTemplate.getForObject("https://gitlab.com/api/v4/projects/{param}", Project.class, param);
 
 //        Get commits and issues and set them in the project class
-        Commit[] commits = restTemplate.getForObject("https://gitlab.com/api/v4/projects/{projectId}/repository/commits", Commit[].class, project.getId());
-        project.setCommits(List.of(commits));
-        Issue[] issues = restTemplate.getForObject("https://gitlab.com/api/v4/projects/{projectId}/issues", Issue[].class, project.getId());
-        project.setIssues(List.of(issues));
+        List<Commit> allCommits = new ArrayList<>();
+        List<Issue> allIssues = new ArrayList<>();
+
+        Boolean hasNextPage = true;
+        Integer i = 1;
+        while (hasNextPage) {
+            Commit[] commits = restTemplate.exchange(
+                    "https://gitlab.com/api/v4/projects/{projectId}/repository/commits?page={page}&per_page=100",
+                    HttpMethod.GET,
+                    new HttpEntity<>(new HttpHeaders()),
+                    Commit[].class, project.getId(), i).getBody();
+            allCommits.addAll(Arrays.asList(commits));
+            HttpHeaders responseHeaders = restTemplate.exchange(
+                    "https://gitlab.com/api/v4/projects/{projectId}/repository/commits?page={page}&per_page=1",
+                    HttpMethod.GET,
+                    new HttpEntity<>(new HttpHeaders()),
+                    Commit[].class, project.getId(), i).getHeaders();
+            if (responseHeaders.get("x-next-page").getFirst() != "") {
+                i++;
+            } else {
+                hasNextPage = false;
+            }
+        }
+
+        if (!allCommits.isEmpty()) { project.setCommits(allCommits); }
+
+        hasNextPage = true;
+        i = 1;
+        while (hasNextPage) {
+            Issue[] issues = restTemplate.exchange(
+                    "https://gitlab.com/api/v4/projects/{projectId}/issues?page={page}&per_page=100",
+                    HttpMethod.GET,
+                    new HttpEntity<>(new HttpHeaders()),
+                    Issue[].class, project.getId(), i).getBody();
+            allIssues.addAll(Arrays.asList(issues));
+            HttpHeaders responseHeaders = restTemplate.exchange(
+                    "https://gitlab.com/api/v4/projects/{projectId}/issues?page={page}&per_page=1",
+                    HttpMethod.GET,
+                    new HttpEntity<>(new HttpHeaders()),
+                    Commit[].class, project.getId(), i).getHeaders();
+            if (responseHeaders.get("x-next-page").getFirst() != "") {
+                i++;
+            } else {
+                hasNextPage = false;
+            }
+        }
+
+        if (!allIssues.isEmpty()) { project.setIssues(allIssues); }
 
 //        Get comments for each issue and set them in the issues
 //        Comments need authorization to get their info?
-        for (Issue issue : issues) {
+        for (Issue issue : project.getIssues()) {
+            List<Comment> allComments = new ArrayList<>();
+            hasNextPage = true;
+            i = 1;
             try {
-            Comment[] comments = restTemplate.getForObject("https://gitlab.com/api/v4/projects/{projectId}/issues/{issueIid}/notes", Comment[].class, project.getId(), issue.getIid());
-            issue.setComments(List.of(comments));
+                while (hasNextPage) {
+                    Comment[] comments = restTemplate.exchange(
+                            "https://gitlab.com/api/v4/projects/{projectId}/issues/{issueIid}/notes?page={page}&per_page=100",
+                            HttpMethod.GET,
+                            new HttpEntity<>(new HttpHeaders()),
+                            Comment[].class, project.getId(), issue.getIid(), i).getBody();
+                    allComments.addAll(Arrays.asList(comments));
+                    HttpHeaders responseHeaders = restTemplate.exchange(
+                            "https://gitlab.com/api/v4/projects/{projectId}/issues/{issueIid}/notes?page={page}&per_page=100",
+                            HttpMethod.GET,
+                            new HttpEntity<>(new HttpHeaders()),
+                            Commit[].class, project.getId(), issue.getIid(), i).getHeaders();
+                    if (responseHeaders.get("x-next-page").getFirst() != "") {
+                        i++;
+                    } else {
+                        hasNextPage = false;
+                    }
+                }
+                if (!allComments.isEmpty()) { issue.setComments(allComments); }
             } catch (HttpClientErrorException.Unauthorized e) {
                 System.out.println("Error getting comments for issue " + issue.getIid() + ": " + e.getMessage());
             }
